fixed the cart icon being misaligned

--- a/src/styles.css
+++ b/src/styles.css
@@ -151,7 +151,7 @@ body {
 
     .cart-btn img {
         position: absolute !important;
-        left: 47.5rem !important;
+        left: 65rem !important;
     }
 }
 
